add node-summary handler and neo4j mode
